--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ams-image-server",
+  "name": "openstad-image-server",
   "keywords": [
     "generic",
     "image",
@@ -11,7 +11,7 @@
     "node",
     "url"
   ],
-  "version": "1.1.1",
+  "version": "0.40.0",
   "description": "Amsterdam Image server, for uploading and resizing images",
   "main": "server.js",
   "scripts": {
@@ -23,12 +23,17 @@
     "dotenv": "^6.0.0",
     "express": "^4.17.1",
     "gm": "^1.23.1",
-    "image-steam": "^0.54.0",
+    "image-steam": "^0.59.0",
     "image-steam-s3": "^1.1.0",
     "knex": "^0.95.11",
     "multer": "^1.4.3",
     "multer-s3": "^2.9.0",
     "mysql": "^2.18.1",
+    "express-json-error-handler": "^2.0.0",
+    "express-json-errors": "^1.0.5",
+    "hat": "0.0.3",
+    "http": "0.0.0",
+    "http-proxy-middleware": "^0.19.0",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
     "yargs": "^4.8.0"
